Fix site resizing on mobile

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -54,7 +54,6 @@
     max-height: 90%;
     color: App.$active-color;
     font-size: 1.5rem;
-    line-height: 2rem;
 
     h1 {
       font-size: 10rem;
