--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -7,23 +7,43 @@
   position: absolute;
   z-index: 3;
   min-height: 500px;
-  display: flex;
   height: 100vh;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-content: center;
+
+  @media (max-width: 1000px) {
+    width: 100vw;
+    height: 10vh;
+    min-height: 1px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 
   .logo {
     display: block;
     padding: 8px 0;
+    max-width: 15vw;
+    max-height: 15vh;
+    width: auto;
+    height: auto;
+
+    @media (max-width: 1000px) {
+      // width: 10vw;
+      // height: 100%;
+      padding: 5px 5px;
+    }
 
     img {
       display: block;
       margin: 8px auto;
-      width: 80%;
       height: auto;
+      width: 80%;
+
+      @media (max-width: 1000px) {
+        margin: auto;
+        height: 100%;
+        width: 100%;
+        display: inline;
+      }
     }
   }
 
@@ -32,15 +52,19 @@
     text-align: center;
     height: 210px;
     width: 100%;
-    // margin-left: 20px;
-    // flex-wrap: wrap;
-    // align-items: baseline;
-    // align-content: center;
-    // justify-content: flex-start;
-    // flex-direction: column;
+
+    @media (max-width: 1000px) {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
 
     a {
-      // float: left;
       color: App.$primary-color;
       font-size: 2vw;
       display: block;
@@ -48,6 +72,14 @@
       height: 10vh;
       position: relative;
       text-decoration: none;
+
+      @media (max-width: 1000px) {
+        width: 10vw;
+        font-size: 3vh;
+        float: left;
+        display: block;
+        padding: 0px 10px;
+      }
 
       i {
         transition: all 0.3s ease-out;
@@ -67,7 +99,7 @@
 
       &:after {
         content: '';
-        font-size: 12px;
+        font-size: 1rem;
         letter-spacing: 2px;
         position: absolute;
         bottom: 0;
@@ -112,6 +144,11 @@
     list-style: none;
     text-align: center;
     margin: 0;
+
+    @media (max-width: 1000px) {
+      bottom: auto;
+      left: 40%;
+    }
 
     li {
       a {
